# PTDLauncher

./: .gitignore  .prettierrc  LICENSE  README.md  base_manager.py  custom_image_button.py  eslint.config.js  get_colormap.py  index.html  package.json  ptd_launcher.py  updater.py  vite.config.ts
.github/workflows/: ci.yml  python-package.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  flash.rs  game.rs  lib.rs  main.rs  ruffle.rs
src/assets/: config.json  version.json
src/components/: GameCard.css  GameCard.tsx  ImageButton.css  ImageButton.tsx  SettingsModal.css  SettingsModal.tsx
src/hooks/: useSounds.ts
src/lib/: api.ts  constants.ts
utils/: custom_image_button.py  set_window_icon.py
